# Pathos-MedGemma-impact-challenge

./: .gitignore  README.md  WRITEUP.md  pyproject.toml  streamlit.py
.streamlit/: config.toml
app/application/: chunk_grounding.py  container.py  datasets.py  ingest_patient_files.py  retrieve_context.py  retriever.py  search_context.py
app/domain/: chunk.py  dataset.py  document.py  embedding.py  knowledge.py  patient.py
app/persistence/: dataset_registry.py  datasets_repo.py  document_repo.py  patient_repo.py
app/providers/cloud_llm/: base.py  factory.py  google_ai.py
app/providers/embeddings/: base.py  factory.py  local.py  remote.py
app/providers/llm/: base.py  factory.py  local.py  remote.py
app/services/: ask.py  chunking.py  embedding.py  ingestion.py  parser.py  ports.py  retrieval.py
app/services/datasets/: clinical_search.py  data_acquisition.py  dataset.py
app/shared/: config.py  date_parser.py  ids.py
demo/: aaanote4.txt  note1.txt  note2.txt  note3.txt  note5.txt  note6.txt  note7.txt  note_ambiguous.txt
